# bookie-breaker-simulation-engine

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  codecov.yml  pyproject.toml
.config/: lefthook.yml  mise.toml
.github/workflows/: ci.yml
scripts/: export_openapi.py
src/simulation_engine/: __init__.py  config.py  main.py  telemetry.py
src/simulation_engine/api/: __init__.py  dependencies.py  envelope.py  errors.py  models.py
src/simulation_engine/api/routes/: __init__.py  games.py  health.py  simulations.py
src/simulation_engine/cache/: __init__.py  redis_cache.py
src/simulation_engine/clients/: __init__.py  statistics.py
src/simulation_engine/core/: __init__.py  calibrate.py  convergence.py  correlations.py  framework.py  hashing.py  league_averages.py  output.py  params.py  player_rates.py  poisson_grid.py  runner.py
src/simulation_engine/core/plugins/: __init__.py  baseball.py  basketball.py  football.py  hockey.py  soccer.py
src/simulation_engine/events/: __init__.py  publisher.py
src/simulation_engine/services/: __init__.py  simulation_service.py
tests/integration/: conftest.py  test_baseball_flow.py  test_correlations_flow.py  test_football_hockey_flow.py  test_live_state_flow.py  test_player_props_flow.py  test_prop_leg_correlations_flow.py  test_simulation_flow.py  test_soccer_flow.py
tests/unit/: conftest.py  test_api.py  test_baseball_plugin.py  test_basketball_plugin.py  test_calibrate.py  test_convergence.py  test_correlations.py  test_correlations_player_legs.py  test_football_plugin.py  test_hashing.py  test_hockey_plugin.py  test_live_state.py  test_output.py  test_params.py  test_placeholder.py  test_player_props.py  test_player_props_api.py  test_player_rates.py  test_runner.py  test_soccer_plugin.py  test_statistics_players.py
