[project]
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.28",
  "numpy>=2.1",
  "opentelemetry-exporter-otlp-proto-grpc>=1.29",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-instrumentation-httpx>=0.50b0",
  "opentelemetry-instrumentation-redis>=0.50b0",
  "opentelemetry-sdk>=1.29",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "redis>=5.2",
  "uvicorn[standard]>=0.34",
]
description = "Monte Carlo simulation engine for sports outcome distributions"
name = "simulation-engine"
requires-python = ">=3.12"
version = "0.1.0"

[dependency-groups]
dev = [
  "ruff>=0.15",
  "mypy>=2.1",
  "pytest>=9.1",
  "pytest-asyncio>=1.4",
  "pytest-cov>=7.1",
  "pip-audit>=2.10",
  "fakeredis>=2.36",
  "pyyaml>=6.0",
  "respx>=0.23",
  "testcontainers[redis]>=4.14",
  "types-pyyaml>=6.0.12",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["opentelemetry.instrumentation.*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
